@@ -6,6 +6,7 @@ import tocraft.walkers.Walkers;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
@@ -17,7 +18,7 @@ public class VersionChecker {
 		if (!checkedUpdate) {
 			try {
 				String line;
-				URL url = new URL(versionURL);
+				URL url = (new URI(versionURL)).toURL();
 				BufferedReader updateReader = new BufferedReader(new InputStreamReader(url.openStream(), StandardCharsets.UTF_8));
 				String updateVersion = Walkers.getVersion();
 				while ((line = updateReader.readLine()) != null) {
